# sqlx

./: Cargo.toml
cargo-sqlx/: Cargo.toml
cargo-sqlx/src/: main.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: cursor.rs  lib.rs
sqlx-core/src/binxml/: atomic_value.rs  attribute.rs  blob.rs  cd_sect.rs  codepage_text.rs  comment.rs  constants.rs  content.rs  decimal.rs  doctype_decl.rs  document.rs  element.rs  extension.rs  metadata.rs  misc.rs  mod.rs  multi_byte.rs  name.rs  nested_xml.rs  pi.rs  sign.rs  sql_date.rs  stand_alone.rs  textdata.rs  tokens.rs  version.rs  xml_decl.rs
sqlx-core/src/io/: buf.rs  buf_stream.rs
sqlx-core/src/mssql/: arguments.rs  connection.rs  cursor.rs  database.rs  error.rs  executor.rs  mod.rs  row.rs  stream.rs  type_info.rs  value.rs
sqlx-core/src/mssql/io/: buf.rs  buf_mut.rs  mod.rs
sqlx-core/src/mssql/message/client/: mod.rs  pre_login.rs
sqlx-core/src/mssql/protocol/: decode.rs  login.rs  login7.rs  message_type.rs  mod.rs  packet_header.rs  packet_type.rs  prelogin.rs  status.rs
sqlx-core/src/mssql/types/: mod.rs
sqlx-core/src/pool/: inner.rs
sqlx-core/src/postgres/: executor.rs  mod.rs
sqlx-core/src/postgres/types/: array.rs  mod.rs
sqlx-core/src/sqlite/: cursor.rs  mod.rs  statement.rs  worker.rs
sqlx-core/src/sqlite/types/: float.rs  int.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/: runtime.rs
sqlx-macros/src/query_macros/: args.rs  data.rs  input.rs  mod.rs  output.rs  query.rs
src/: lib.rs  macros.rs
tests/: mssql.rs  mysql.rs  postgres-types.rs  postgres.rs
(+40 files in other folders)
